personajes cargandos en el home

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
-<div class="shadow py-4">
+<div class="shadow-lg py-4">
   <div class="container">
-    <p class="text-center mb-0">Desarrollador por David Banzer</p>
+    <p class="text-center mb-0">Developed by David Banzer</p>
   </div>
 </div>
