--- a/src/app/modules/characters/pages/characters-list/characters-list.component.html
+++ b/src/app/modules/characters/pages/characters-list/characters-list.component.html
@@ -4,38 +4,42 @@
       <img class="mx-auto d-block img-fluid" src="assets/logo/logo-2.png" width="500" alt="Rick and Morty">
     </div>
   </div>
-  <form action="">
-    <div class="row">
-      <div class="col-lg-3 col-md-6 col-sm-12">
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
-          <input type="text" class="form-control" placeholder="Filter by name..." aria-label="Filter by name..."
-            aria-describedby="basic-addon1">
-        </div>
+  <div class="row mb-1">
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
+        <input type="text" class="form-control" placeholder="Filter by name..." aria-label="Filter by name..."
+          aria-describedby="basic-addon1" [(ngModel)]="nameFilter">
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-12">
-        <select class="form-select mb-3" aria-label="Default select example ">
-          <option selected disabled>Species</option>
-          <option value="1">One</option>
-        </select>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-12">
-        <select class="form-select mb-3" aria-label="Default select example">
-          <option selected disabled>Gender</option>
-          <option value="1">One</option>
-
-        </select>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-12">
-        <select class="form-select mb-3" aria-label="Default select example">
-          <option selected disabled>Status</option>
-          <option value="1">One</option>
-        </select>
-      </div>
-
     </div>
-  </form>
-  <div class="row my-5">
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="basic-addon2"><i class="bi bi-search"></i></span>
+        <input type="text" class="form-control" placeholder="Specie" aria-label="Specie"
+          aria-describedby="basic-addon2" [(ngModel)]="specieFilter">
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <select class="form-select mb-3" aria-label="Gender" [(ngModel)]="genderFilter">
+        <option selected disabled>Gender</option>
+        <option *ngFor="let gender of enumValues(genderEnum)" [value]="gender">{{gender == '' ? 'All' : capitalizeFirstLetter(gender)}}</option>
+
+      </select>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <select class="form-select mb-3" aria-label="Status" [(ngModel)]="statusFilter">
+        <option selected disabled>Status</option>
+        <option *ngFor="let status of enumValues(statusEnum)" [value]="status">{{status == '' ? 'All' : capitalizeFirstLetter(status)}}</option>
+      </select>
+    </div>
+
+  </div>
+  <div class="row mb-5">
+    <div class="col d-flex justify-content-end">
+      <button class="btn btn-primary shadow" (click)="applyFilters()">Search</button>
+    </div>
+  </div>
+  <div class="row mb-5">
     <div class="col-lg-3 col-md-6 col-sm-12" *ngFor="let character of charactersList">
       <div class="card mb-3 w-100 shadow" style="width: 18rem;">
         <img src="{{character.image}}" class="card-img-top" alt="character">
@@ -46,5 +50,12 @@
       </div>
     </div>
   </div>
-  <button class="btn btn-outline-primary mb-5 mx-auto d-block shadow" (click)="loadMoreCharacters()">Load more</button>
+  <div class="row mb-5">
+    <div class="col">
+      <div class="d-flex justify-content-center gap-3">
+        <button class="btn btn-outline-primary shadow" (click)="previousPage()" [disabled]="!this.pageInformation.prev">Previous</button>
+        <button class="btn btn-outline-primary shadow" (click)="nextPage()" [disabled]="!this.pageInformation.next">Next</button>
+      </div>
+    </div>
+  </div>
 </div>
