logo y favicon cambiados

--- a/src/app/modules/characters/pages/characters-list/characters-list.component.html
+++ b/src/app/modules/characters/pages/characters-list/characters-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <img class="mx-auto d-block img-fluid" src="assets/logo/logo-2.png" width="500" alt="Rick and Morty">
+      <img class="mx-auto d-block img-fluid" src="assets/images/img-characters.png" width="500" alt="Rick and Morty">
     </div>
   </div>
   <div class="row mb-1">
