--- a/src/app/modules/characters/pages/characters-list/characters-list.component.html
+++ b/src/app/modules/characters/pages/characters-list/characters-list.component.html
@@ -42,13 +42,6 @@
       <button class="btn btn-primary shadow" (click)="applyFilters()">Search</button>
     </div>
 
-    <div *ngIf="alertService.activeAlert"
-      class="alert alert-{{alertService.activeAlert.type}} alert-dismissible fade show mt-3" role="alert">
-      {{ alertService.activeAlert.message }}
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"
-        (click)="alertService.hideAlert()"></button>
-    </div>
-
   </div>
   <div class="row mb-5">
     <div class="col-lg-3 col-md-6 col-sm-12" *ngFor="let character of charactersList">
@@ -105,3 +98,4 @@
     </div>
   </div>
 </div>
+<app-toast></app-toast>
